PC-24,PC-13,PC-17,PC-26 Restructed Web Content folder. Added Search grid and modal popup

--- a/WebContent/views/login.view.html
+++ b/WebContent/views/login.view.html
@@ -1,13 +1,13 @@
 <html>
 <head>
     <title> Login </title>
-    <link href="./Psych-CM-Project--MSD/PsychCM/public/adminLayout/css/bootstrap.min.css" rel="stylesheet">
-    <link href="./Psych-CM-Project--MSD/PsychCM/public/adminLayout/css/login.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/login.css" rel="stylesheet">
 </head>
 <section id="login">
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
+            <div class="col-xs-12 col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 main">
                 <h1>Log in to your account</h1>
                 <form role="form" action="javascript:;" method="post" id="login-form" autocomplete="off">
                     <div class="form-group">
