--- a/WebContent/views/targetGroup.view.html
+++ b/WebContent/views/targetGroup.view.html
@@ -80,7 +80,39 @@ Licensed under MIT
                                 <!-- <div ng-show="model.updateMessage" class="alert alert-success" role="alert">{{model.updateMessage}}</div>
                                  <div ng-show="model.updateErrorMessage" class="alert alert-danger" role="alert">{{model.updateErrorMessage}}</div>-->
                             </div>
-
+							<div>
+           		<h4>Search Results</h4>
+           		<div class="table-responsive" id="formtable">
+    <table class="table table-striped table-bordered">
+        <thead>
+        <tr>
+            <th><span class="glyphicon glyphicon-triangle-bottom"></span> Target Group Name</th>
+            <th><span class="glyphicon glyphicon-triangle-bottom"></span> Description</th>
+            <th><span class="glyphicon glyphicon-triangle-bottom"></span> Keywords</th>
+            <th><span class="glyphicon glyphicon-triangle-bottom"></span> Location</th>
+            <th><span class="glyphicon glyphicon-triangle-bottom"></span> Training</th>
+            <th><span class="glyphicon glyphicon-triangle-bottom"></span> Registration Code</th>
+            <th> Actions</th>
+        </tr>
+     
+        </thead>
+        <tbody>
+        <tr>
+            <td><a href=""> Test target group </a></td>
+            <td> Testing </td>
+            <td> Testing </td>
+            <td> Testing</td>
+            <td> Testing</td>
+            <td> Testing</td>
+            <td>
+                <a href=""><span class="glyphicon glyphicon-pencil incrsize" data-toggle="modal"
+                                                 data-target="#myModal"></span></a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+           </div> 
 
                         </div>
                         <div class="tab-pane active" id="tab_default_2" ng-show="model.isSet('create')">
@@ -130,7 +162,78 @@ Licensed under MIT
                     </div>
                 </div>
             </div>
+            
 
+        </div>
+    </div>
+        <!-- Modal view content -->
+       <div id="myModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Edit Target Group</h4>
+                </div>
+                <div class="modal-body">
+                   <div class="form-horizontal">
+                                <div class="form-group">
+                                    <label for="inputName2" class="col-sm-2 control-label">Name:</label>
+                                    <div class="col-sm-7">
+                                        <input type="text" class="form-control" id="inputName2" placeholder="Name of the location" ng-model="model.firstName">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="inputName3" class="col-sm-2 control-label">Description:</label>
+                                    <div class="col-sm-7">
+                                        <input type="text" class="form-control" id="inputName3" placeholder="Description of the target group" ng-model="model.lastName">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="inputEmail3" class="col-sm-2 control-label">Keywords:</label>
+                                    <div class="col-sm-7">
+                                        <input type="email" class="form-control" id="inputEmail3" placeholder="Keywords" ng-model="model.email">
+                                    </div>
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="inputEmail3" class="col-sm-2 control-label">Location</label>
+                                    <div class="col-sm-7">
+                                        <select name="trainings" ng-model="model.email" required="required"></select>
+                                    </div>
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="inputEmail3" class="col-sm-2 control-label">Training</label>
+                                    <div class="col-sm-7">
+                                        <select name="trainings" ng-model="model.email" required="required"></select>
+                                    </div>
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="inputEmail3" class="col-sm-2 control-label">Registration Code</label>
+                                    <div class="col-sm-7">
+                                        <input type="text" class="form-control" id="inputEmail3" placeholder="Registration Code" ng-model="model.email">
+                                    </div>
+                                </div>
+
+
+                                <div class="form-group">
+                                    <div class="col-sm-offset-2 col-sm-7">
+                                        <button type="submit" class="btn btn-default btn-primary btn-block" ng-click="model.update()">Update</button>
+                                    </div>
+                                </div>
+                                <!-- <div ng-show="model.updateMessage" class="alert alert-success" role="alert">{{model.updateMessage}}</div>
+                                 <div ng-show="model.updateErrorMessage" class="alert alert-danger" role="alert">{{model.updateErrorMessage}}</div>-->
+                            </div>
+                    
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="button" ng-click="model.update(model.selectedField)" class="btn btn-default" data-dismiss="modal">Ok</button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
