--- a/WebContent/views/targetGroup.view.html
+++ b/WebContent/views/targetGroup.view.html
@@ -86,12 +86,12 @@ Licensed under MIT
     <table class="table table-striped table-bordered">
         <thead>
         <tr>
-            <th><span class="glyphicon glyphicon-triangle-bottom"></span> Target Group Name</th>
-            <th><span class="glyphicon glyphicon-triangle-bottom"></span> Description</th>
-            <th><span class="glyphicon glyphicon-triangle-bottom"></span> Keywords</th>
-            <th><span class="glyphicon glyphicon-triangle-bottom"></span> Location</th>
-            <th><span class="glyphicon glyphicon-triangle-bottom"></span> Training</th>
-            <th><span class="glyphicon glyphicon-triangle-bottom"></span> Registration Code</th>
+            <th> Target Group Name</th>
+            <th> Description</th>
+            <th> Keywords</th>
+            <th> Location</th>
+            <th> Training</th>
+            <th> Registration Code</th>
             <th> Actions</th>
         </tr>
      
