--- a/WebContent/views/index.html
+++ b/WebContent/views/index.html
@@ -42,6 +42,8 @@
     <script src="targetGroup.controller.js"></script>
     <script src="../services/user.service.client.js"></script>
     <script src="navigation.controller.js"></script>
+    <script src="../services/question.service.client.js"></script>
+    <script src="question.controller.js"></script>
 
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
