--- a/WebContent/views/navigation.view.html
+++ b/WebContent/views/navigation.view.html
@@ -19,7 +19,7 @@
     <!-- Top Menu Items -->
     <ul class="nav navbar-right top-nav">
         <li class="dropdown">
-            <a href="" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{user.firstName}} <b class="caret"></b></a>
+            <a href="" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{currentUser.firstName}} <b class="caret"></b></a>
             <ul class="dropdown-menu">
                 <li>
                     <a href="#/profile"><i class="fa fa-fw fa-user"></i> Profile</a>
@@ -44,7 +44,7 @@
                 <a href=""><i class="fa fa-picture-o"></i> Image Management </a>
             </li>
             <li ng-class="{'active' : model.$location.url() =='/questionManagement'}">
-                <a href=""><i class="fa fa-question-circle"></i> Question Management </a>
+                <a href="#/questionManagement"><i class="fa fa-question-circle"></i> Question Management </a>
             </li>
             <li ng-class="{'active' : model.$location.url() =='/training'}">
                 <a href=""><i class="fa fa-mobile"></i> Trainings </a>
