--- a/WebContent/views/location.view.html
+++ b/WebContent/views/location.view.html
@@ -47,7 +47,7 @@ Licensed under MIT
                                 <div class="form-group">
                                     <label for="inputEmail3" class="col-sm-2 control-label">Keywords:</label>
                                     <div class="col-sm-7">
-                                        <input type="email" class="form-control" id="inputEmail3" placeholder="Keywords" ng-model="model.searchLoc.keywords">
+                                        <input type="text" class="form-control" id="inputEmail3" placeholder="Keywords" ng-model="model.searchLoc.keywords">
                                     </div>
                                 </div>
 
